# auto-market-analysis

./: .env  README.md  docker-compose.yml
AutoAS_old/: README.md  pyproject.toml
AutoAS_old/autoas/: pw_scraper.py  simple_scraper.py
backend/: pyproject.toml
backend/app/: config.py  database.py  models.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 2024_06_29_1650-48b1499d2002_initial_migration.py
scraper/: README.md  pyproject.toml
scraper/scraper/: database.py  models.py  pipelines.py  settings.py  utils.py
scraper/scraper/spiders/: drom_spider.py
