[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["filivan <filivandev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
alembic = "^1.13.1"
pydantic-settings = "^2.3.3"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
