[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["filivan <filivandev@gmail.com>"]
readme = "README.md"
packages = [{include = "scraper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"
scrapy-playwright = "^0.0.35"
sqlalchemy = "^2.0.30"
psycopg2 = "^2.9.9"
pydantic-settings = "^2.3.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
